@@ -120,6 +120,9 @@ Release 2.4.0 - UNRELEASED
 
     HADOOP-10422. Remove redundant logging of RPC retry attempts. (cnauroth)
 
+    HADOOP-10425. LocalFileSystem.getContentSummary should not count crc files.
+    (szetszwo)
+
   BREAKDOWN OF HADOOP-10184 SUBTASKS AND RELATED JIRAS
 
     HADOOP-10185. FileSystem API for ACLs. (cnauroth)
